--- a/src/manifest.json
+++ b/src/manifest.json
@@ -8,16 +8,16 @@
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
-      "16": "/images/get_started16.png",
-      "32": "/images/get_started32.png",
-      "48": "/images/get_started48.png",
-      "128": "/images/get_started128.png"
+      "16": "/images/logo_16.png",
+      "32": "/images/logo_32.png",
+      "48": "/images/logo_48.png",
+      "128": "/images/logo_128.png"
     }
   },
   "icons": {
-    "16": "/images/get_started16.png",
-    "32": "/images/get_started32.png",
-    "48": "/images/get_started48.png",
-    "128": "/images/get_started128.png"
+    "16": "/images/logo_16.png",
+    "32": "/images/logo_32.png",
+    "48": "/images/logo_48.png",
+    "128": "/images/logo_128.png"
   }
 }
