--- a/package.json
+++ b/package.json
@@ -1,20 +1,26 @@
 {
   "name": "home-assistant-extension",
-  "version": "1.0.0",
-  "description": "",
-  "main": "src/options/options.js",
+  "version": "0.1.0",
+  "description": "Home Assistant extension for Chrome",
+  "private": true,
   "scripts": {
-    "dev": "webpack --watch --progress --mode=development",
-    "build": "rm -fr dist && webpack --progress --mode=production",
+    "dev": "webpack --mode=development --watch --progress",
+    "build": "webpack --mode=production --progress",
+    "pack": "crx pack dist -o home-assistant.crx -p key.pem",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky install"
   },
   "prettier": "@bokub/prettier-config",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "chrome-extension",
+    "home-assistant"
+  ],
+  "author": "Boris K",
+  "license": "MIT",
   "devDependencies": {
     "@bokub/prettier-config": "^2.1.0",
+    "bulma": "^0.9.2",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
     "copy-webpack-plugin": "^8.1.1",
     "css-loader": "^5.2.4",
     "husky": "^6.0.0",
@@ -23,13 +29,10 @@
     "pretty-quick": "^3.1.0",
     "sass": "^1.32.11",
     "sass-loader": "^11.0.1",
+    "vue": "^2.6.12",
     "vue-loader": "^15.9.6",
     "vue-template-compiler": "^2.6.12",
     "webpack": "^5.35.1",
     "webpack-cli": "^4.6.0"
-  },
-  "dependencies": {
-    "bulma": "^0.9.2",
-    "vue": "^2.6.12"
   }
 }
