--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "home-assistant-extension",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "Home Assistant extension for Chrome and Firefox",
   "private": true,
   "scripts": {
     "dev:chrome": "webpack --mode=development --watch --progress",
     "dev:firefox": "npm run dev:chrome -- --env browser=firefox",
-    "build:chrome": "webpack --mode=production --progress",
+    "build:chrome": "webpack --mode=production",
     "build:firefox": "npm run build:chrome -- --env browser=firefox",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky install"
@@ -23,7 +23,6 @@
     "bulma": "^0.9.2",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "copy-webpack-plugin": "^8.1.1",
-    "crx": "^5.0.1",
     "css-loader": "^5.2.4",
     "husky": "^6.0.0",
     "mini-css-extract-plugin": "^1.5.0",
